[package]
name = "nba_time_puller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["web"] }
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
time = {version = "0.3.9", features = ['parsing', 'macros']}
reqwest = "0.11.10"
num_enum = "0.5.7"
futures = "0.3.21"